[package]
name = "encrypto_rsa"
version = "4.0.0"
edition = "2021"
description = "stunning-encrypto is cross platform end-to-end encryption dependency."
homepage = "https://www.ssdd.dev/zot/crypto/rsa/rust"
repository = "https://github.com/zotcrypto/encrypto-rsa-rust"
readme = "README.md"
keywords = ["RSA", "end-to-end-encrypton", "stunning-encrypto", "encryption", "rust-e2ee"]
categories = ["cryptography"]
license = "MIT"

[dependencies]
num-primes = "0.3.0"
rand = "0.8.5"
num = { version = "0.4.1", default-features = false }
num-bigint = { version = "0.4.4", features = ["rand", "serde"] }
base64 = "0.21.3"
#serde = { version = "1.0.147", features = ["derive"] }
#serde_json = {version = "1.0.89"}
#rsa = "0.7.2"
#pem = "1.1.0"
#libaes = "0.6.4"
#num-traits = "0.2.15"
#num-integer = "0.1.45"
