[package]
name = "encrypto_rsa"
version = "5.0.0"
edition = "2021"
description = "stunning-encrypto is cross platform end-to-end encryption dependency."
homepage = "https://www.ssdd.dev/zot/crypto/rsa/rust"
repository = "https://github.com/zotcrypto/encrypto-rsa-rust"
readme = "README.md"
keywords = ["RSA", "end-to-end-encrypton", "stunning-encrypto", "encryption", "rust-e2ee"]
categories = ["cryptography"]
license = "MIT"

[dependencies]
rand = { version = "0.8.5",features = ["getrandom"] }
getrandom = {version = "0.2.15",features = ["wasm-bindgen", "js"]}
base64 = "0.22.1"
anyhow = "1.0.86"
rsa = {version = "0.9.6", features = ["serde"]}
serde_json = "1.0.118"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"